--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="input-group">
                     <input type="text" class="form-control input-lg" placeholder="youremail@example.com">
                     <span class="input-group-btn">
-                        <a href="#about" class="btn btn-primary btn-xl page-scroll">Join Waiting list Now</a>
+                        <a href="#about" class="btn btn-primary btn-xl page-scroll">Get Free Trial</a>
                     </span>
                 </div>
             </div>
@@ -134,18 +134,20 @@
         </div>
     </section>
 
+
     <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
+                    <p>Come on, join us now to get our newest updates. We'll give you a free trail :)</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <div class="input-group">
                         <input type="text" class="form-control input-lg" placeholder="youremail@example.com">
                         <span class="input-group-btn">
-                            <a href="#about" class="btn btn-primary btn-xl page-scroll">Join Waiting list Now</a>
+                            <a href="#" class="btn btn-primary btn-xl page-scroll">Get Free Trial</a>
                         </span>
                     </div>
                 </div>
