--- a/index.html
+++ b/index.html
@@ -80,11 +80,13 @@
                     Your personal 1 on 1 online guitar mentor. <br>
                     Join waiting list now to get a free trail!
                 </p>
-                <div class="input-group">
-                    <input type="text" class="form-control input-lg" placeholder="youremail@example.com">
-                    <span class="input-group-btn">
-                        <a href="#about" class="btn btn-primary btn-xl page-scroll">Get Free Trial</a>
-                    </span>
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <div class="input-group">
+                        <input type="text" class="form-control input-lg" placeholder="youremail@example.com">
+                        <span class="input-group-btn">
+                            <a href="#about" class="btn btn-primary btn-xl page-scroll">Get Free Trial</a>
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
